Fixing bug with display on iphone

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -9,7 +9,6 @@ blockquote {
     padding: 0 20px;
     font-size: 1.35em;
     font-style: italic;
-    width: 500px;
     /*padding: 0.35em 40px;*/
     line-height: 1.45;
     position: relative;
@@ -454,8 +453,6 @@ footer li a:hover {
 hr {
   border: 2px solid #f1f1eb;
 }
-
-
 
 
 .massive {
